--- a/authors.yaml
+++ b/authors.yaml
@@ -1,6 +1,6 @@
-- name: "Your full name as appears on your transcript"
-  mcgill_id: "Your mcgill id"
-  email: "email@mail.mcgill.ca"
+- name: "Shivam Aery"
+  mcgill_id: "260896005"
+  email: "shivam.aery@mail.mcgill.ca"
 
 - name: "Your full name as appears on your transcript"
   mcgill_id: "Your mcgill id"
