--- a/authors.yaml
+++ b/authors.yaml
@@ -2,6 +2,6 @@
   mcgill_id: "260896005"
   email: "shivam.aery@mail.mcgill.ca"
 
-- name: "Your full name as appears on your transcript"
-  mcgill_id: "Your mcgill id"
-  email: "email@mail.mcgill.ca"
+- name: "Chun Chiu"
+  mcgill_id: "261184131"
+  email: "chun.chiu@mail.mcgill.ca"
